Fixes minor layout issues

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -33,7 +33,12 @@ footer{
     flex-direction: column;
     justify-content: center;
     padding: 1px;
+    margin-top: 200px;
     margin-bottom: 20px;
+}
+
+.page-footer{
+    margin-top: 400px;
 }
 
 .main_header {
